# twiga-aaltoai

./: .env.example  .gitignore  README.md  analysis of llm-as-a-judge metrics.md  app.py  chunks_export.jsonl  evaluation.py  evaluation_rouge_bleu_results.csv  generate_answers.py  pyproject.toml  requirements.txt  streamlit_app.py  testset_generation.py  testset_with_answers_qwen3.5_397B_A17B.csv
answer_generation/: clean_answers.py  cleaners.py  generate_answers.py  test_llm_direct.py  twiga_runner.py
data/current/: rag_evaluation_results.csv  testset_progress.csv  testset_rewritten_questions.csv  testset_with_twiga_answers.csv
data/old/: rag_evaluation_results.csv  rag_evaluation_results_cleaned.csv
data/results/2026-05-07_14-23-56_unknown/: metadata.txt  results.csv
data/testsets/: default.csv
eval/: answer_generator.py  metrics.py  results.py  testset.py
metrics/lexical_metrics/: evaluate_rouge_bleu.py
metrics/llm_as_a_judge_metrics/: __init__.py  answer_relevancy.py  base.py  custom_correctness.py  factual_correctness.py  faithfulness.py
pages/: 1_Run_Evaluation.py  2_Manage_Testsets.py  3_Performance.py
tests/: conftest.py  test_answer_generator.py  test_metrics.py  test_results.py  test_testset.py
testset_generation/: remake_question.py  testset_generation.py
