[project]
name = "twiga-aaltoai"
version = "0.1.0"
description = "Streamlit evaluation dashboard for Twiga AI response quality"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8",
    "plotly>=5.0",
    "python-dotenv>=1.0",
    "twiga",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["eval", "pages"] }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
twiga = { path = "../twiga", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
